--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "jest",
-    "start": "node app.js"
+    "start": "node app.js",
+    "lint": "jshint app.js database*.js migrate.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
     "sequelize": "^5.21.2"
   },
   "devDependencies": {
-    "jest": "^24.9.0"
+    "jest": "^24.9.0",
+    "jshint": "^2.10.3"
   }
 }
