--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -38,3 +38,8 @@ blocks:
           commands:
             - sem-service start postgres
             - npm run test
+promotions:
+  - name: Dockerize
+    pipeline_file: docker-build.yml
+    auto_promote_on:
+      - result: passed
